--- a/Kapitel/erste_schritte.tex
+++ b/Kapitel/erste_schritte.tex
@@ -7,10 +7,10 @@ Zunächst werden die Grundeinstellungen für das Layout des Dokuments festgelegt
 Mit dem Befehl \textbf{\texttt{\textbackslash documentclass[Option1, Option2, ...]\{Dokumentenklasse\}}} wird die Dokumentenklasse festgelegt außerdem können weitere Optionen angegeben werden.
 
 Mögliche Dokumentenklassen sind:
-\input{Anlagen/Tabellen/Dokumentklassen.tex}
+\input{anlagen/tabellen/dokumentklassen.tex}
 
 Mögliche Optionen sind:
-\input{Anlagen/Tabellen/Einstellungen_Dokumentklassen.tex}
+\input{anlagen/tabellen/einstellungen_dokumentklassen.tex}
 
 
 \subsubsection{Inkludieren von Paketen}
@@ -33,3 +33,5 @@ reffernzen
 %\newcommand{cmd}{def}
 einheiten mit siunitx
 neue seite
+%\hspace{} \vspace{} \vfill
+%//
