--- a/Kapitel/deckblatt.tex
+++ b/Kapitel/deckblatt.tex
@@ -1,26 +1,28 @@
 \begin{titlepage}  % Deckblatt als eigene Seite
-    \centering
-    \vspace*{0.5cm}  % Abstand nach oben
+    \begin{center}
 
-    % Logo
-    \includegraphics[width=4cm]{anlagen/bilder/logo.png}
-    \vspace{1cm}  % Abstand nach dem Logo
+        \vspace*{0.5cm}  % Abstand nach oben
 
-    % Titel und Untertitel
-    {\Huge \textbf{Latex Anleitung}} \\[0.5cm]
-    {\Large \textbf{Untertitel ;)}} \\[1.5cm]
+        % Logo
+        \includegraphics[width=4cm]{anlagen/bilder/logo.png}
+        \vspace{1cm}  % Abstand nach dem Logo
 
-    % Horizontale Linie für Trennung 
-    \rule{12cm}{0.5pt} \\[1.5cm]  % 12cm lange, 0.5pt dicke Linie
+        % Titel und Untertitel
+        {\Huge \textbf{Latex Anleitung}} \\[0.5cm]
+        {\Large \textbf{Untertitel ;)}} \\[1.5cm]
 
-    % Zusätzliche Infos (Autor, Datum, etc.)
-    \textbf{\Large Autor:} \Large Simon Vehreschild \\[0.5cm]
-    \textbf{\Large Betreuer:} \Large Dr. Beispiel \\[0.5cm]
-    \textbf{\Large Datum:} \Large \today \\[3cm]
+        % Horizontale Linie für Trennung 
+        \rule{12cm}{0.5pt} \\[1.5cm]  % 12cm lange, 0.5pt dicke Linie
 
-    % --- Universität / Fakultät
-    {Der Inhalt ist ausschließlich für private Zwecke} \\
-    {bestimmt und darf nicht weiter gegeben werden.} \\
+        % Zusätzliche Infos (Autor, Datum, etc.)
+        \textbf{\Large Autor:} \Large Simon Vehreschild \\[0.5cm]
+        \textbf{\Large Betreuer:} \Large Dr. Beispiel \\[0.5cm]
+        \textbf{\Large Datum:} \Large \today \\[3cm]
 
-    \vfill  % Füllt den restlichen Platz, um den Text in der Mitte zu halten
+        % --- Universität / Fakultät
+        {Der Inhalt ist ausschließlich für private Zwecke} \\
+        {bestimmt und darf nicht weiter gegeben werden.} \\
+
+        \vfill  % Füllt den restlichen Platz, um den Text in der Mitte zu halten
+    \end{center}
 \end{titlepage}
