--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -17,6 +17,9 @@ Mögliche Optionen sind:
 Der Befehl \textbf{\texttt{\textbackslash usepackage[Optionen]\{Paketname\}}} ermöglicht das Einbinden von Paketen, die zusätzliche Funktionen und Einstellungen bereitstellen.
 
 
+test oder nicht ;D
+
+
 \newpage
 
 \section{Fehlt noch:}
