--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -17,7 +17,7 @@ Mögliche Optionen sind:
 Der Befehl \textbf{\texttt{\textbackslash usepackage[Optionen]\{Paketname\}}} ermöglicht das Einbinden von Paketen, die zusätzliche Funktionen und Einstellungen bereitstellen.
 
 
-test oder nicht ;D
+letzter test
 
 
 \newpage
