--- a/kapitel/deckblatt.tex
+++ b/kapitel/deckblatt.tex
@@ -8,8 +8,8 @@
         \vspace{1cm}  % Abstand nach dem Logo
 
         % Titel und Untertitel
-        {\Huge \textbf{Latex Anleitung}} \\[0.5cm]
-        {\Large \textbf{Untertitel ;)}} \\[1.5cm]
+        {\Huge \textbf{LaTeX Anleitung}} \\[0.5cm]
+        {\Large \textbf{(kurz für Lamport TeX)}} \\[1.5cm]
 
         % Horizontale Linie für Trennung 
         \rule{12cm}{0.5pt} \\[1.5cm]  % 12cm lange, 0.5pt dicke Linie
