--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -1,7 +1,7 @@
 \section{Erste Schritte}
 \subsection{Einstellungen und Struktur}
 
-Zunächst werden die Grundeinstellungen für das Layout des Dokuments festgelegt. Dazu wird eine Latex-Datei \textbf{main.tex} erstellt, in welcher die Dokumentenklasse, die verwendeten Pakete und die Layout-Einstellungen festgelegt werden.
+Zunächst werden die Grundeinstellungen für das Layout des Dokuments festgelegt. Dazu wird eine LaTeX-Datei \textbf{main.tex} erstellt, in welcher die Dokumentenklasse, die verwendeten Pakete und die Layout-Einstellungen festgelegt werden.
 
 \subsubsection{Festlegen der Dokumentenklasse}
 Mit dem Befehl \textbf{\texttt{\textbackslash documentclass[Option1, Option2, ...]\{Dokumentenklasse\}}} wird die Dokumentenklasse festgelegt außerdem können weitere Optionen angegeben werden.
@@ -15,9 +15,15 @@ Mögliche Optionen sind:
 
 \subsubsection{Inkludieren von Paketen}
 Der Befehl \textbf{\texttt{\textbackslash usepackage[Optionen]\{Paketname\}}} ermöglicht das Einbinden von Paketen, die zusätzliche Funktionen und Einstellungen bereitstellen.
+Eine Übersicht an Paketen und deren Funktionen ist in der bereitgestellten main.tex Datei zu finden.
 
+\subsubsection{Öffnen und Schließen eines Dokuments}
+Das eigentliche Dokument wird mit dem Befehl \textbf{\texttt{\textbackslash begin\{document\}}} begonnen und mit dem Befehl \textbf{\texttt{\textbackslash end\{document\}}} beendet.
+Alle Anweisungen davor dienen lediglich der Vorbereitung des Dokuments. Alle Anweisungen danach werden ignoriert. Alle Inhalte der folgenden Unterpunkte sind innerhalb dieser beiden Befehle zu platzieren.
 
-letzter test
+\subsubsection{Deckblatt}
+Morgen gehts weiter ;D
+
 
 
 \newpage
