--- a/kapitel/deckblatt_vorlage_berichte.tex
+++ b/kapitel/deckblatt_vorlage_berichte.tex
@@ -3,24 +3,23 @@
     %-------------------------------------------------------------
     \begin{center}
         {\Large\bf Inbetriebnahme Messtechnik}\\[3cm]
-
+        
         {\bf Inbetriebnahme}\\
         für \\
         Gassensorik\\[1.5cm]
-
+        
         an der\\
         Hochschule Niederrhein\\
         Fachbereich Elektrotechnik und Informatik\\
         Studiengang {\em Elektrotechnik}\\[3cm]
-
+        
         vorgelegt von\\
         Tom Arlt und Simon Vehreschild\\
         1335730 und 1543175\\
         Gruppe 12-6\\[3cm]
         Datum: \today\\[3cm]
-
+        
     \end{center}
 \end{titlepage}
 
-\pagestyle{empty}
-\newpage
+\pagestyle{empty} % ohne Seitennummerierung
