--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -21,9 +21,30 @@ Eine Übersicht an Paketen und deren Funktionen ist in der bereitgestellten main
 Das eigentliche Dokument wird mit dem Befehl \textbf{\texttt{\textbackslash begin\{document\}}} eröffnet und mit dem Befehl \textbf{\texttt{\textbackslash end\{document\}}} beendet.
 Alle Anweisungen davor dienen lediglich der Vorbereitung des Dokuments. Alle Anweisungen danach werden ignoriert. Alle Inhalte der folgenden Unterpunkte sind innerhalb dieser beiden Befehle zu platzieren.
 
-\subsubsection{Deckblatt}
-Morgen gehts weiter ;D
+\subsubsection{Einbinden / Erstellen des Deckblatts}
+In der Regel wird ein Deckblatt benötigt, welches Informationen wie den Titel, den Autor, das Datum und ein Logo enthält. Dieses kann entweder als PDF-Datei eingebunden, falls ein bereits erstelltes Deckblatt verwendet werden soll oder als neue LaTeX-Datei erstellt werden.
+Das einbinden einer PDF-Datei erfolgt mit dem Befehl \textbf{\texttt{\textbackslash includepdf\{Pfad/zur/Datei.pdf\}}}. Für diesen Befehl wird das Paket \textbf{pdfpages} benötigt.
+Alternativ kann das Deckblatt auch als LaTeX-Datei eingebunden werden, indem der Inhalt des Deckblatts in eine neue Datei geschrieben und mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}} eingebunden wird. Hilfreich ist die Funktion \textbf{\texttt{\textbackslash begin\{titlepage\}}} und \textbf{\texttt{\textbackslash end\{titlepage\}}} um zwischen diesen Befehlen das Deckblatt zu erstellen.
 
+\subsubsection{Anpassen der Kopf- und Fußzeilen}
+Die Kopf- und Fußzeilen können mit dem Paket \textbf{fancyhdr} besonders elegant angepasst werden. Zunächst wird mit dem Befehl \textbf{\texttt{\textbackslash pagestyle\{fancy\}}} die Verwendung von individuellen Kopf- und Fußzeilen aktiviert. Anschließend werden mit den Befehlen \textbf{\texttt{\textbackslash fancyfoot\{\}}} und \textbf{\texttt{\textbackslash fancyhead\{\}}} die Standardeinstellungen für Fuß- und Kopfzeile gelöscht. Die Befehle \textbf{\texttt{\textbackslash fancyfoot[Position]\{Text\}}} und \textbf{\texttt{\textbackslash fancyhead[Position]\{Text\}}} ermöglichen das Hinzufügen von Text oder Bildern in die Fuß- oder Kopfzeile.
+
+Als Position sind die folgenden Angaben möglich:
+\begin{itemize}
+    \item \textbf{C} - zentriert
+    \item \textbf{L} - linksbündig
+    \item \textbf{R} - rechtsbündig
+    \item \textbf{C} / \textbf{L} / \textbf{R} in Kombination mit \textbf{E} oder \textbf{O} für gerade oder ungerade Seitenzahlen möglich
+\end{itemize}
+
+Ist eine Seitennummerierung in der Form Seite X von Y gewünscht, ist dies mit dem Befehl \textbf{\texttt{\textbackslash fancyfoot[C]\{Seite \textbackslash thepage$\thicksim$von$\thicksim$\textbackslash pageref\{LastPage\}\}}} möglich. Hierbei wird das Paket \\ \textbf{lastpage} benötigt.
+
+Soll die Kopfzeile den aktuellen \textbackslash section\{\} Namen anzeigen, kann dies mit dem Befehl \\ \textbf{\texttt{\textbackslash fancyhead[R]\{\{\textbackslash leftmark\}\}}} erreicht werden.
+
+Eine Trennlinie zwischen Fußzeile und Dokument, sowie zwischen Kopfzeile und Dokument kann mit den Befehlen \textbf{\texttt{\textbackslash renewcommand\{\textbackslash footrulewidth\}\{...pt\}}} und \textbf{\texttt{\textbackslash renewcommand\{\textbackslash headrulewidth\}\{...pt\}}} eingefügt oder mit 0pt gelöscht werden.
+
+% •	\thispagestyle{empty} – Keine Kopf- oder Fußzeile auf der aktuellen Seite
+% •	\thispagestyle{plain} – Normale Fußzeile ohne Kopfzeile
 
 
 \newpage
@@ -37,9 +58,12 @@ reffernzen
 %\ und {} in anweisungen
 % \text, texttt, textbf, textit, underline , emph , farbig mit \textcolor{color}{text}
 %\input
+pdf
+stichpunkjte
+quellcode
 %Tabellen, Booktabs, Multicolumn, Multirow, Landscape
 %\newcommand{cmd}{def}
 einheiten mit siunitx
 neue seite
 %\hspace{} \vspace{} \vfill
-%//
+%\\ für neue zeile
