--- a/main.tex
+++ b/main.tex
@@ -73,10 +73,11 @@
 \fancyhead[R]{\nouppercase{\leftmark}}                             % Kopfzeile: Kapitelname
 
 % Inhaltsverzeichnis
+\setcounter{tocdepth}{3}
 \tableofcontents
 \newpage
 
 % Kapitel in separaten Dateien
-\input{kapitel/übersicht.tex}
+\input{kapitel/uebersicht.tex}
 
 \end{document}
