--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -17,16 +17,16 @@ Mögliche Optionen sind:
 Der Befehl \textbf{\texttt{\textbackslash usepackage[Optionen]\{Paketname\}}} ermöglicht das Einbinden von Paketen, die zusätzliche Funktionen und Einstellungen bereitstellen.
 Eine Übersicht an Paketen und deren Funktionen ist in der bereitgestellten main.tex Datei zu finden.
 
-\subsubsection{Öffnen und Schließen eines Dokuments}
+\subsection{Öffnen und Schließen eines Dokuments}
 Das eigentliche Dokument wird mit dem Befehl \textbf{\texttt{\textbackslash begin\{document\}}} eröffnet und mit dem Befehl \textbf{\texttt{\textbackslash end\{document\}}} beendet.
 Alle Anweisungen davor dienen lediglich der Vorbereitung des Dokuments. Alle Anweisungen danach werden ignoriert. Alle Inhalte der folgenden Unterpunkte sind innerhalb dieser beiden Befehle zu platzieren.
 
-\subsubsection{Einbinden / Erstellen des Deckblatts}
+\subsection{Einbinden / Erstellen des Deckblatts}
 In der Regel wird ein Deckblatt benötigt, welches Informationen wie den Titel, den Autor, das Datum und ein Logo enthält. Dieses kann entweder als PDF-Datei eingebunden, falls ein bereits erstelltes Deckblatt verwendet werden soll oder als neue LaTeX-Datei erstellt werden.
 Das einbinden einer PDF-Datei erfolgt mit dem Befehl \textbf{\texttt{\textbackslash includepdf\{Pfad/zur/Datei.pdf\}}}. Für diesen Befehl wird das Paket \textbf{pdfpages} benötigt.
-Alternativ kann das Deckblatt auch als LaTeX-Datei eingebunden werden, indem der Inhalt des Deckblatts in eine neue Datei geschrieben und mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}} eingebunden wird. Hilfreich ist die Funktion \textbf{\texttt{\textbackslash begin\{titlepage\}}} und \textbf{\texttt{\textbackslash end\{titlepage\}}} um zwischen diesen Befehlen das Deckblatt zu erstellen.
+Alternativ kann das Deckblatt auch als LaTeX-Datei eingebunden werden, indem der Inhalt des Deckblatts in eine neue Datei geschrieben und mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}} eingebunden wird. Hilfreich ist die Funktion \textbf{\texttt{\textbackslash begin\{titlepage\}}} und \textbf{\texttt{\textbackslash end\{titlepage\}}} um zwischen diesen Befehlen das Deckblatt zu erstellen. In dem Ordner \textbf{kapitel} sind zwei Beispieldateien zu finden.
 
-\subsubsection{Anpassen der Kopf- und Fußzeilen}
+\subsection{Anpassen der Kopf- und Fußzeilen}
 Die Kopf- und Fußzeilen können mit dem Paket \textbf{fancyhdr} besonders elegant angepasst werden. Zunächst wird mit dem Befehl \textbf{\texttt{\textbackslash pagestyle\{fancy\}}} die Verwendung von individuellen Kopf- und Fußzeilen aktiviert. Anschließend werden mit den Befehlen \textbf{\texttt{\textbackslash fancyfoot\{\}}} und \textbf{\texttt{\textbackslash fancyhead\{\}}} die Standardeinstellungen für Fuß- und Kopfzeile gelöscht. Die Befehle \textbf{\texttt{\textbackslash fancyfoot[Position]\{Text\}}} und \textbf{\texttt{\textbackslash fancyhead[Position]\{Text\}}} ermöglichen das Hinzufügen von Text oder Bildern in die Fuß- oder Kopfzeile.
 
 Als Position sind die folgenden Angaben möglich:
@@ -37,7 +37,7 @@ Als Position sind die folgenden Angaben möglich:
     \item \textbf{C} / \textbf{L} / \textbf{R} in Kombination mit \textbf{E} oder \textbf{O} für gerade oder ungerade Seitenzahlen möglich
 \end{itemize}
 
-Ist eine Seitennummerierung in der Form Seite X von Y gewünscht, ist dies mit dem Befehl \textbf{\texttt{\textbackslash fancyfoot[C]\{Seite \textbackslash thepage$\thicksim$von$\thicksim$\textbackslash pageref\{LastPage\}\}}} möglich. Hierbei wird das Paket \\ \textbf{lastpage} benötigt.
+Ist eine Seitennummerierung in der Form Seite X von Y gewünscht, kann dies mit dem Befehl \textbf{\texttt{\textbackslash fancyfoot[C]\{Seite \textbackslash thepage$\thicksim$von$\thicksim$\textbackslash pageref\{LastPage\}\}}} ermöglicht werden. Hierbei wird das Paket \textbf{lastpage} benötigt.
 
 Soll die Kopfzeile den aktuellen \textbackslash section\{\} Namen anzeigen, kann dies mit dem Befehl \\ \textbf{\texttt{\textbackslash fancyhead[R]\{\{\textbackslash leftmark\}\}}} erreicht werden.
 
@@ -49,28 +49,27 @@ Manchmal ist es gewünscht auf einer Seite keine Kopf- und/oder Fußzeile zu hab
     \item \textbf{\texttt{\textbackslash thispagestyle\{plain\}}} - Normale Fußzeile ohne Kopfzeile
 \end{itemize}
 
-\subsubsection{Erstellen des Inhaltsverzeichnisses}
-% weiter 
-Das Inhaltsverzeichnis wird mit dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} erstellt. Es ist ratsam, das Inhaltsverzeichnis auf einer neuen Seite zu beginnen, um eine bessere Übersicht zu gewährleisten. Dies kann mit dem Befehl \textbf{\texttt{\textbackslash newpage}} erreicht werden.
+\subsection{Erstellen des Inhaltsverzeichnisses (und weiterer Verzeichnisse)}
+Das Inhaltsverzeichnis wird mit dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} erstellt. Die Tiefe des Inhaltsverzeichnis kann mit dem Befehl \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} festgelegt werden. Dabei steht X für die \underbar{maximale Tiefe} des Inhaltsverzeichnisses und kann folgende Werte annehmen:
 
-weitere  Einstelungen
-\newpage
+\begin{itemize}
+    \item \textbf{0} - Nur \texttt{\textbackslash part\{\}} (nur in \texttt{book} oder \texttt{report})
+    \item \textbf{1} - \texttt{\textbackslash part\{\}} und \texttt{\textbackslash chapter\{\}} (nur in \texttt{book} oder \texttt{report})
+    \item \textbf{2} - \texttt{\textbackslash chapter\{\}} und \texttt{\textbackslash section\{\}}
+    \item \textbf{3} - \texttt{\textbackslash section\{\}} und \texttt{\textbackslash subsection\{\}}
+    \item \textbf{4} - \texttt{\textbackslash subsection\{\}} und \texttt{\textbackslash subsubsection\{\}}
+    \item \textbf{5} - \texttt{\textbackslash subsubsection\{\}} und \texttt{\textbackslash paragraph\{\}}
+    \item \textbf{6} - \texttt{\textbackslash paragraph\{\}} und \texttt{\textbackslash subparagraph\{\}}
+\end{itemize}
 
-\section{Fehlt noch:}
+Für die Anwendung dieses Befehls ist darauf zu achten, dass der Befehl \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} vor dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} platziert werden muss.
+
+Sollen weitere Inhaltsverzeichnisse für Abbildungen, Tabellen, etc. erstellt werden, so kann dies mit den Befehlen \textbf{\texttt{\textbackslash listoffigures}}, \textbf{\texttt{\textbackslash listoftables}}, etc. erreicht werden.
 
 
-%kommentare
-fett, kursiv
-reffernzen
-%\ und {} in anweisungen
-% \text, texttt, textbf, textit, underline , emph , farbig mit \textcolor{color}{text}
-%\input
-pdf
-stichpunkjte
-quellcode
-%Tabellen, Booktabs, Multicolumn, Multirow, Landscape
-%\newcommand{cmd}{def}
-einheiten mit siunitx
-neue seite
-%\hspace{} \vspace{} \vfill
-%\\ für neue zeile
+Darüber hinaus sind weitere Einstellungen mit den Paketen \textbf{tocloft}, \textbf{titletoc} und \textbf{minitoc} möglich.
+
+\subsection{Einbinden von Kapiteln}
+Besonders bei langen und umfangreichen Dokumenten ist es sinnvoll, die einzelnen Kapitel in separaten Dateien zu erstellen und diese dann in das Hauptdokument einzubinden. Dies geschieht mit dem Befehl \textbf{\texttt{\textbackslash input\{Pfad/zur/Datei.tex\}}}. Dabei ist darauf zu achten, dass der Pfad relativ zum Hauptdokument angegeben wird.
+Ich persönlich strukturiere meine LaTeX-Dateien in einem eigenen Ordner (kapitel) und binde sie in einer dafür vorgesehenen Datei (uebersicht.tex) ein, welche in der main.tex Datei eingefügt wird. Somit muss die main.tex Datei nach einmaliger Einrichtung nicht mehr verändert werden.
+
