--- a/kapitel/deckblatt.tex
+++ b/kapitel/deckblatt.tex
@@ -8,7 +8,7 @@
         \vspace{1cm}  % Abstand nach dem Logo
 
         % Titel und Untertitel
-        {\Huge \textbf{LaTeX Anleitung}} \\[0.5cm]
+        {\Huge \textbf{\LaTeX{} Anleitung}} \\[0.5cm]
         {\Large \textbf{(kurz für Lamport TeX)}} \\[1.5cm]
 
         % Horizontale Linie für Trennung 
