--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -82,6 +82,7 @@ Textpassagen können mit folgenden Befehlen in Rahmen oder Boxen gesetzt werden:
     \label{tab:textformatierung}
 \end{table}
 
+\newpage
 
 \subsection{Abstandsformatierung}
 
