--- a/anlagen/tabellen/dokumentklassen.tex
+++ b/anlagen/tabellen/dokumentklassen.tex
@@ -2,17 +2,17 @@
     \centering
     \begin{tabular}{ll}
         \toprule
-        \textbf{Klasse}  & \textbf{Beschreibung}                                                               \\
+        \textbf{Klasse}  & \textbf{Beschreibung}                                                         \\
         \midrule
-        \texttt{article} & Kurze Texte, wissenschaftliche Artikel, Berichte,                                   \\
-                         & Unterstützt \textbackslash section\{...\}  aber keine \textbackslash chapter\{...\} \\
-        \texttt{report}  & Längere Dokumente mit Kapiteln (z. B. Abschlussarbeiten)                            \\
-                         & Unterstützt \textbackslash chapter\{...\}                                           \\
-        \texttt{book}    & Bücher mit Kapiteln, Abschnitten und Teilen                                         \\
-                         & Unterstützt \textbackslash part\{...\}                                              \\
-        \texttt{letter}  & Briefe                                                                              \\
+        \texttt{article} & Kurze Texte, wissenschaftliche Artikel, Berichte,                             \\
+                         & Unterstützt \textbackslash section\{\}  aber keine \textbackslash chapter\{\} \\
+        \texttt{report}  & Längere Dokumente mit Kapiteln (z. B. Abschlussarbeiten)                      \\
+                         & Unterstützt \textbackslash chapter\{\}                                        \\
+        \texttt{book}    & Bücher mit Kapiteln, Abschnitten und Teilen                                   \\
+                         & Unterstützt \textbackslash part\{\}                                           \\
+        \texttt{letter}  & Briefe                                                                        \\
 
-        \texttt{beamer}  & Präsentationen (wie PowerPoint)                                                     \\
+        \texttt{beamer}  & Präsentationen (wie PowerPoint)                                               \\
         \bottomrule
     \end{tabular}
     \caption{Standard-Dokumentenklassen für \texttt{\textbackslash documentclass}}
