--- a/anlagen/tabellen/abstand_horizontal.tex
+++ b/anlagen/tabellen/abstand_horizontal.tex
@@ -11,6 +11,7 @@
         \texttt{\textbackslash qquad}          & Fügt \textbf{doppelten Tabulator-Abstand} (2 em) ein              \\
         \texttt{\textbackslash enspace}        & Fügt \textbf{halben Leerzeichen-Abstand} (0.5 em) ein             \\
         \texttt{\textbackslash hfill}          & Füllt den \textbf{gesamten verfügbaren horizontalen Platz}        \\
+        \texttt{\textbackslash hfil}           & Fügt flexiblen Abstand ein                                        \\
         \midrule
         \texttt{\textbackslash !}              & Entfernt ein \textbf{kleines Leerzeichen} (negativer Abstand)     \\
         \texttt{\textbackslash ignorespaces}   & Entfernt \textbf{alle nachfolgenden Leerzeichen}                  \\
