--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -82,6 +82,10 @@ Textpassagen können mit folgenden Befehlen in Rahmen oder Boxen gesetzt werden:
     \label{tab:textformatierung}
 \end{table}
 
+Einige Zeichen, wie \textbf{\%}, \textbf{\#}, \textbf{\&}, \textbf{\_} und \textbf{\{} müssen in Latex mit einem Backslash maskiert werden, um sie als Textzeichen zu verwenden (\textbf{\textbackslash\%}, \textbf{\textbackslash\#}, \textbf{\textbackslash\&}, \textbf{\textbackslash\_}, \textbf{\textbackslash\{}).
+
+Für einige Zeichen gibt es auch spezielle Befehle, die eine Darstellung unabhängig von der Funktion des Zeichens ermöglichen. Beispiele sind \textbf{\textbackslash textbackslash} für den Backslash \textbf{\textbackslash}, \textbf{\textbackslash textasciitilde} für die Tilde \textbf{\textasciitilde} und \textbf{\textbackslash textasciicircum} für das Zirkumflex \textbf{\textasciicircum}.
+
 \subsection{Abstandsformatierung}
 \subsubsection{Vertikaler Abstand}
 Der vertikale Abstand kann mit den folgenden Befehlen geändert werden:
