--- a/kapitel/deckblatt.tex
+++ b/kapitel/deckblatt.tex
@@ -16,7 +16,7 @@
 
         % Zusätzliche Infos (Autor, Datum, etc.)
         \textbf{\Large Autor:} \Large Simon Vehreschild \\[0.5cm]
-        \textbf{\Large Betreuer:} \Large Dr. Beispiel \\[0.5cm]
+        % \textbf{\Large Betreuer:} \Large Dr. Beispiel \\[0.5cm]
         \textbf{\Large Datum:} \Large \today \\[3cm]
 
         % --- Universität / Fakultät
