--- a/main.tex
+++ b/main.tex
@@ -86,6 +86,8 @@
 % Inhaltsverzeichnis
 \setcounter{tocdepth}{3}
 \tableofcontents
+\listoftables
+\listoffigures
 \newpage
 
 % Kapitel in separaten Dateien
