--- a/kapitel/deckblatt.tex
+++ b/kapitel/deckblatt.tex
@@ -15,13 +15,17 @@
         \rule{12cm}{0.5pt} \\[1.5cm]  % 12cm lange, 0.5pt dicke Linie
 
         % Zusätzliche Infos (Autor, Datum, etc.)
-        \textbf{\Large Autor:} \Large Simon Vehreschild \\[0.5cm]
+        \textbf{\Large Autor:} {\Large Simon Vehreschild} \\[0.5cm]
         % \textbf{\Large Betreuer:} \Large Dr. Beispiel \\[0.5cm]
-        \textbf{\Large Datum:} \Large \today \\[3cm]
+        \textbf{\Large Datum:} {\Large \today} \\[3cm]
 
         % --- Universität / Fakultät
-        {Der Inhalt ist ausschließlich für private Zwecke} \\
-        {bestimmt und darf nicht weiter gegeben werden.} \\
+        {\large \LaTeX{} ist ein Textsatzsystem, das speziell für wissenschaftliche Arbeiten entwickelt wurde.
+        Auf den folgenden Seiten werden einige nützliche Tipps und Tricks vorgestellt, die die Arbeit mit \LaTeX{} vereinfachen sollen}
+
+        \vfill
+
+        {\large Die Inhalte sind ausschließlich für den privaten Gebrauch bestimmt und dürfen nicht weiterverbreitet oder vervielfältigt werden.} \\[1cm]
 
         \vfill  % Füllt den restlichen Platz, um den Text in der Mitte zu halten
     \end{center}
